force-app/main/default/objects/PointsProvider__c/PointsProvider__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Third PartyCustom Settings</label>
</CustomObject>