force-app/main/default/objects/PointsProvider__c/fields/ALITALIA_BASE_RATE__c.field-meta.xml
<CustomField>
    <fullName>ALITALIA_BASE_RATE__c</fullName>
    <label>ALITALIA BASE RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>