force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Max_Card_Digits__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Max_Card_Digits__c</fullName>
    <label>Alitalia Max Card Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>