force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Partner_Code_Base__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Partner_Code_Base__c</fullName>
    <description>Partner Code for Base Points Transfer</description>
    <label>Alitalia Partner Code Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>