force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Partner_Code_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Partner_Code_Bonus__c</fullName>
    <description>Partner Code for Bonus Transfer</description>
    <label>Alitalia Partner Code Bonus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>