force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Partner_Type__c</fullName>
    <label>Alitalia Partner Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>