force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Points_Service_Password__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Points_Service_Password__c</fullName>
    <description>Alitalia Points Service  App User Password</description>
    <label>Alitalia Points Service Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>