force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Points_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Points_Service_User__c</fullName>
    <description>Application Username for the Alitalia Service</description>
    <label>Alitalia Points Service User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>