force-app/main/default/objects/PointsProvider__c/fields/Alitalia_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Alitalia_Provider_ID__c</fullName>
    <defaultValue>&apos;a0QR0000002Q6PCMA0&apos;</defaultValue>
    <label>Alitalia Provider ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>