force-app/main/default/objects/PointsProvider__c/fields/Default_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Provider_Type__c</fullName>
    <label>Default Provider Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>