force-app/main/default/objects/PointsProvider__c/fields/Etihad_Base_Credit_Activity_Classificati__c.field-meta.xml
<CustomField>
    <fullName>Etihad_Base_Credit_Activity_Classificati__c</fullName>
    <label>Etihad Base Credit Activity Classificati</label>
    <length>20</length>
    <type>Text</type>
</CustomField>