force-app/main/default/objects/PointsProvider__c/fields/ETIHAD_BASE_RATE__c.field-meta.xml
<CustomField>
    <fullName>ETIHAD_BASE_RATE__c</fullName>
    <label>ETIHAD BASE RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>