force-app/main/default/objects/PointsProvider__c/fields/Etihad_WS_Company__c.field-meta.xml
<CustomField>
    <fullName>Etihad_WS_Company__c</fullName>
    <label>Etihad WS Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>