force-app/main/default/objects/PointsProvider__c/fields/Etihard_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Etihard_Provider_ID__c</fullName>
    <label>Etihard Provider ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>