force-app/main/default/objects/PointsProvider__c/fields/System_ID__c.field-meta.xml
<CustomField>
    <fullName>System_ID__c</fullName>
    <label>System ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>